<resources>
    <string name="app_name">Olamlarga rahmat payg\'ambar</string>
    <string name="main">Asosiy</string>
    <string name="cases">Holatlari</string>
    <string name="settings">Sozlamalar</string>
    <string name="more">Batafsil</string>
    <string name="siyrat">Siyrat</string>
    <string name="salovat">Salovat</string>
    <string name="daily_hadislar">Kunlik hadislar</string>
    <string name="yes">Ha</string>
    <string name="no">Yo`q</string>
    <string name="all_siyratlar">Payg’ambarimiz ﷺ siyratlari</string>
    <string name="dark_mode">Tungi rejim</string>
    <string name="about_app">Dastur haqida</string>
    <string name="share">Ulashish</string>
    <string name="let_is_say_hello">Keling salovat aytamiz</string>
    <string name="did_you_say_blessing_today">Bugun salovat aytdingizmi?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>