<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsFragment">

    <include
        android:id="@+id/toolbarSettings"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_secondary_backcolor_r8"
                android:contentDescription="@string/dark_mode"
                android:padding="6dp"
                android:src="@drawable/ic_dark_mode_theme" />

            <TextView
                style="@style/I16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/dark_mode"
                android:textColor="@color/d_main_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/themeSwitchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_btn_thumb_color"
                app:trackTint="@color/switch_btn_track_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_secondary_backcolor_r8"
                android:contentDescription="@string/dark_mode"
                android:padding="6dp"
                android:src="@drawable/ic_about_app" />

            <TextView
                style="@style/I16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/about_app"
                android:textColor="@color/d_main_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about_app"
                android:src="@drawable/ic_right_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_secondary_backcolor_r8"
                android:contentDescription="@string/dark_mode"
                android:padding="6dp"
                android:src="@drawable/ic_share_app" />

            <TextView
                style="@style/I16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="@color/d_main_text" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>