<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.home.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d_main_bg">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/more"
            android:scaleType="centerCrop"
            android:src="@drawable/tropical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-8dp"
            android:background="@drawable/bg_main_backcolor_top_r8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:background="@color/s_transparent">

        <include
            android:id="@+id/toolbarFragment"
            layout="@layout/main_toolbar_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/s_transparent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMainHadith"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_view_pager" />

                    <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                        android:id="@+id/dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:spi_dotColor="@color/d_unselected_dots_color"
                        app:spi_dotSelectedColor="@color/d_primary"
                        app:spi_dotSelectedSize="7dp"
                        app:spi_dotSize="5dp"
                        app:spi_dotSpacing="4dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_salavat_q"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_secondary_backcolor_r18">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/more"
                        android:src="@drawable/ic_moon_star"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivTasbeeh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/more"
                        android:src="@drawable/ic_tasbeeh"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/I16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/did_you_say_blessing_today"
                        android:textColor="@color/d_main_text"
                        app:layout_constraintBottom_toBottomOf="@id/ivTasbeeh"
                        app:layout_constraintStart_toEndOf="@id/ivTasbeeh"
                        app:layout_constraintTop_toTopOf="@id/ivTasbeeh" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        app:layout_constraintTop_toBottomOf="@id/ivTasbeeh">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnNo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_no_btncolor_r10"
                            android:stateListAnimator="@null"
                            android:text="@string/no"
                            android:textAllCaps="false"
                            android:textAppearance="@style/I16"
                            android:textColor="@color/d_main_text"
                            app:backgroundTint="@null" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnYes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_primary_color_r10"
                            android:stateListAnimator="@null"
                            android:text="@string/yes"
                            android:textAllCaps="false"
                            android:textAppearance="@style/I16"
                            android:textColor="@color/d_main_bg"
                            app:backgroundTint="@null" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvSiyrat"
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/d_siyrat_bg"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="12dp">

                            <TextView
                                style="@style/I16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/siyrat"
                                android:textColor="@color/d_main_text" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/siyrat"
                                android:src="@drawable/ic_outfit__man" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvSalovat"
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/d_salovat_bg"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="12dp">

                            <TextView
                                style="@style/I16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salovat"
                                android:textColor="@color/d_main_text" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/salovat"
                                android:src="@drawable/ic_tasbeeh_large" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvDailyHadis"
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/d_daily_hadis_bg"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="12dp">

                            <TextView
                                style="@style/I16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/daily_hadislar"
                                android:textColor="@color/d_main_text" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/daily_hadislar"
                                android:src="@drawable/ic_quran" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <include
                    android:id="@+id/llLetSayHello"
                    layout="@layout/item_title_right_arrow" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>